--- a/docker/Dockerfile.rbase
+++ b/docker/Dockerfile.rbase
@@ -8,7 +8,7 @@ RUN chmod 777 /tmp/
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
-ENV R_BASE_VERSION 3.5.3
+ENV R_BASE_VERSION 3.6.1
 
 
 LABEL org.label-schema.license='GPL-2.0' \
@@ -68,12 +68,9 @@ RUN apt-get update \
 # installing R packages for zUMI to run
 RUN \
   R -e "install.packages(c( \
-          'yaml','shiny','shinythemes','shinyBS','ggplot2','mclust','dplyr', \
-          'cowplot','Matrix','BiocManager','devtools','stringdist','data.table', \
-          'plotly', 'crosstalk'))" \
-  && R -e "BiocManager::install(c( \
-            'GenomicRanges','GenomicFeatures', \
-            'GenomicAlignments','AnnotationDbi','Rsubread', \
-            'Glimma', 'edgeR'))" \
+    'ggplot2','dplyr', 'Matrix', \
+    'BiocManager','devtools', 'stringdist', \
+    'data.table', 'plotly', 'crosstalk'))" \
+  && R -e "BiocManager::install(c('Biostrings','phyloseq', 'dada2'))" \
   && R -e "devtools::install_github('hadley/multidplyr')" \
   && R -e "devtools::install_github('VPetukhov/ggrastr')"
